# aoc22

./: .gitignore  Cargo.toml  Makefile  stdlib.s
day1/: day1.s  day1a.s  day1b.s
day10/: day10a.rs
day11/: day11a.rs  day11b.rs
day12/: day12a.rs  day12b.rs
day13/: day13a.rs  day13b.rs
day14/: day14a.rs  day14b.rs
day15/: day15a.rs  day15b.rs
day16/: day16a.rs  day16b.rs
day2/: day2a.s  day2b.s
day3/: day3a.s  day3b.s
day4/: day4a.s  day4b.s
day5/: day5a.s  day5b.s
day6/: day6a.s  day6b.s
day7/: day7a.s  day7b.s
day8/: day8a.s  day8b.s
day9/: day9a.s  day9b.rs
day9.unused/: day9a.rs
