[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day9a"
path = "day9/day9a.rs"

[[bin]]
name = "day9b"
path = "day9/day9b.rs"

[[bin]]
name = "day10a"
path = "day10/day10a.rs"

[[bin]]
name = "day10b"
path = "day10/day10b.rs"

[[bin]]
name = "day11a"
path = "day11/day11a.rs"

[[bin]]
name = "day11b"
path = "day11/day11b.rs"

[[bin]]
name = "day12a"
path = "day12/day12a.rs"

[[bin]]
name = "day12b"
path = "day12/day12b.rs"

[dependencies]
memmap = "0.7.0"
