[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day9a"
path = "day9/day9a.rs"

[[bin]]
name = "day9b"
path = "day9/day9b.rs"

[[bin]]
name = "day10a"
path = "day10/day10a.rs"

[[bin]]
name = "day10b"
path = "day10/day10b.rs"

[[bin]]
name = "day11a"
path = "day11/day11a.rs"

[[bin]]
name = "day11b"
path = "day11/day11b.rs"

[[bin]]
name = "day12a"
path = "day12/day12a.rs"

[[bin]]
name = "day12b"
path = "day12/day12b.rs"

[[bin]]
name = "day13a"
path = "day13/day13a.rs"

[[bin]]
name = "day13b"
path = "day13/day13b.rs"

[[bin]]
name = "day14a"
path = "day14/day14a.rs"

[[bin]]
name = "day14b"
path = "day14/day14b.rs"

[[bin]]
name = "day15a"
path = "day15/day15a.rs"

[[bin]]
name = "day15b"
path = "day15/day15b.rs"

[dependencies]
memmap = "0.7.0"
